[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.9.12,<0.10" ]

[project]
name = "aiohttp-msal"
version = "1.0.11"
description = "Helper Library to use the Microsoft Authentication Library (MSAL) with aiohttp"
readme = "README.md"
keywords = [ "aiohttp", "asyncio", "msal", "oauth" ]
license = { file = "LICENSE" }
authors = [ { name = "Johann Kellerman", email = "kellerza@gmail.com" } ]
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "aiohttp>=3.11.18",
  "aiohttp-session[aioredis]>=2.12.1,<3",
  "msal>=1.32.3",
]
urls.Homepage = "https://github.com/kellerza/aiohttp_msal"

[dependency-groups]
dev = [
  "codespell",
  "mypy",
  "pyproject-fmt",
  "pytest",
  "pytest-aiohttp",
  "pytest-asyncio",
  "pytest-cov",
  "types-redis",
  "zuban>=0.5.1",
]

[tool.ruff]
format.line-ending = "lf"
format.docstring-code-format = true
lint.select = [
  "A",     # flake8-builtins
  "ASYNC", # flake8-async
  "B",     # bugbear
  "D",     # pydocstyle
  "E",     # pycodestyle
  "F",     # pyflakes
  "I",     # isort
  "PGH",   # pygrep-hooks
  "PIE",   # flake8-pie
  "PL",    # pylint
  "PTH",   # flake8-pathlib
  "PYI",   # flake8-pyi
  "RUF",   # ruff
  "UP",    # pyupgrade
  "W",     # pycodestyle
]
lint.ignore = [
  "D203",
  "D213",
  "E203",
  "E501",
  "PLC0415",
  "PLR2004",
  "PLW2901",
  "UP047",
]
lint.isort.no-lines-before = [ "future", "standard-library" ]

[tool.codespell]
skip = [ "build/*" ]

[tool.pytest]
ini_options.pythonpath = [ ".", "src" ]
ini_options.filterwarnings = "ignore:.+@coroutine.+deprecated.+"
ini_options.norecursedirs = [ ".git", "modules" ]
ini_options.log_cli = true
ini_options.log_cli_level = "DEBUG"
ini_options.asyncio_mode = "auto"
ini_options.addopts = "--cov=aiohttp_msal --cov-report xml:cov.xml"
ini_options.asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.semantic_release]
commit = true
tag = true
vcs_release = true
commit_parser = "emoji"
version_toml = [ "pyproject.toml:project.version" ]
build_command = "pip install uv && uv build"
commit_version_number = true
# https://python-semantic-release.readthedocs.io/en/latest/multibranch_releases.html#configuring-multibranch-releases
branches.main.match = "main"
commit_parser_options.major_tags = [ ":boom:" ]
commit_parser_options.minor_tags = [ ":rocket:" ]
commit_parser_options.patch_tags = [ "" ]  # always patch
