[metadata]
name = aiohttp_msal
version = attr: aiohttp_msal.VERSION
description = Helper Library to use the Microsoft Authentication Library (MSAL) with aiohttp
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kellerza/aiohttp_msal
author = Johann Kellerman
author_email = kellerza@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
keywords = msal, oauth, aiohttp, asyncio

[options]
packages = find:
python_requires = >=3.10
include_package_data = True
# tests_requires = file: requirements_test.txt
install_requires =
    msal>=1.30.0
    aiohttp_session>=2.12
    aiohttp>=3.8
zip_safe = true

[options.extras_require]
redis =
    aiohttp_session[aioredis]>=2.12
tests =
    black==24.8.0
    pylint==3.2.6
    flake8
    pytest-aiohttp
    pytest
    pytest-cov
    pytest-asyncio
    pytest-env

[mypy]
disallow_untyped_defs = True

[mypy-msal.*]
ignore_missing_imports = True

[tool:pytest]
filterwarnings =
    ignore:.+@coroutine.+deprecated.+
log_cli = True
log_cli_level = DEBUG
asyncio_mode = auto
env =
    X_SP_APP_PW=p1
    X_SP_APP_ID=i1
    X_SP_AUTHORITY=a1
    SP_APP_PW=p2
    SP_APP_ID=i2
    SP_AUTHORITY=a2
